@@ -48,7 +48,7 @@ Print control output changes to stdout.
 \fB\-s\fR
 Show plugin UI if possible.
 
-This option only works when plugins provide a UI that is usable via the non-embeddable showHide interface.  For other, embeddable UIs, use jalv.gtk(1) or jalv.qt(1).
+This option only works when plugins provide a UI that is usable via the non-embeddable showHide interface.  For other, embeddable UIs, use jalv.gtk3(1) or jalv.qt5(1).
 
 .TP
 \fB\-t\fR
@@ -72,7 +72,6 @@ The Jalv prompt supports several commands for interactive control:
   \fBSYMBOL = VALUE\fR    Set control value by symbol
 
 .SH "SEE ALSO"
-.BR jalv.gtk(1),
 .BR jalv.gtk3(1),
 .BR jalv.qt5(2),
 .BR lv2ls(1),
