@@ -1,58 +1,0 @@
-.TH JALV.GTK 1 "18 Feb 2017"
-
-.SH NAME
-.B jalv.gtk \- Run an LV2 plugin as a JACK application (Gtk version).
-
-.SH SYNOPSIS
-.B jalv.gtk [OPTION]... PLUGIN_URI
-
-.SH OPTIONS
-
-.TP
-\fB\-b SIZE\fR
-Buffer size for plugin <=> UI communication.
-
-.TP
-\fB\-c SYM=VAL\fR
-Set control value (e.g. "vol=1.4").
-
-.TP
-\fB\-d\fR, \fB\-\-dump\fR
-Dump plugin <=> UI communication.
-
-.TP
-\fB\-U URI\fR
-Load the UI with the given URI.
-
-.TP
-\fB\-g\fR, \fB\-\-generic\-ui\fR
-Use Jalv generic UI and not the plugin UI.
-
-.TP
-\fB\-h\fR, \fB\-\-help\fR
-Print the command line options.
-
-.TP
-\fB\-l DIR\fR, \fB\-\-load DIR\fR
-Load state from state directory.
-
-.TP
-\fB\-p\fR, \fB\-\-print\-controls\fR
-Print control output changes to stdout.
-
-.TP
-\fB\-t\fR, \fB\-\-trace\fR
-Print trace messages from plugin.
-
-.SH "SEE ALSO"
-.BR jalv(1),
-.BR jalv.gtk3(1),
-.BR jalv.qt5(1),
-.BR lv2ls(1),
-.BR jackd(1)
-
-.SH AUTHOR
-jalv was written by David Robillard <d@drobilla.net>
-.PP
-This manual page was written by Jaromír Mikes <mira.mikes@seznam.cz>
-and David Robillard <d@drobilla.net>
