@@ -46,7 +46,6 @@ Print trace messages from plugin.
 
 .SH "SEE ALSO"
 .BR jalv(1),
-.BR jalv.gtk(1),
 .BR jalv.qt5(1),
 .BR lv2ls(1),
 .BR jackd(1)
