@@ -13,7 +13,6 @@ developer testing purposes, for a production ready program use jalv.gtk.
 
 .SH "SEE ALSO"
 .BR jalv(1),
-.BR jalv.gtk(1),
 .BR jalv.gtk3(1),
 .BR lv2ls(1),
 .BR jackd(1)
