@@ -3,10 +3,6 @@
 
 install_man('jalv.1')
 
-if not get_option('gtk2').disabled()
-  install_man('jalv.gtk.1')
-endif
-
 if not get_option('gtk3').disabled()
   install_man('jalv.gtk3.1')
 endif
