@@ -1,9 +1,10 @@
 jalv (1.6.9) stable; urgency=medium
 
   * Build Qt UI with -fPIC
+  * Remove Gtk2 interface
   * Switch to external zix dependency
 
- -- David Robillard <d@drobilla.net>  Sat, 19 Nov 2022 10:51:27 +0000
+ -- David Robillard <d@drobilla.net>  Sun, 11 Dec 2022 18:52:53 +0000
 
 jalv (1.6.8) stable; urgency=medium
 
